学习mybatis plus拦截器处理

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.5.0</version>
     </parent>
     <groupId>com.today.springboot</groupId>
     <artifactId>roc-spring-boot</artifactId>
@@ -14,6 +14,7 @@
     <modules>
         <module>spring-boot-base</module>
         <module>spring-boot-tomcat</module>
+        <module>spring-boot-mybatisplus</module>
     </modules>
 
     <properties>
@@ -25,6 +26,11 @@
         <!--        <mysql_version>5.1.25</mysql_version>-->
         <mysql_version>8.0.20</mysql_version>
         <spring_boot_version>2.4.2</spring_boot_version>
+        <mybatisplus.spring.version>3.4.2</mybatisplus.spring.version>
+        <lombok_version>1.18.12</lombok_version>
+        <guava_version>29.0-jre</guava_version>
+        <commons-lang3_version>3.6</commons-lang3_version>
+        <commons_io_version>2.5</commons_io_version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -32,24 +38,24 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring_boot_version}</version>
-<!--                <exclusions>-->
-<!--                    <exclusion>-->
-<!--                        <groupId>org.springframework.boot</groupId>-->
-<!--                        <artifactId>spring-boot-starter-tomcat</artifactId>-->
-<!--                    </exclusion>-->
-<!--                </exclusions>-->
+                <!--                <exclusions>-->
+                <!--                    <exclusion>-->
+                <!--                        <groupId>org.springframework.boot</groupId>-->
+                <!--                        <artifactId>spring-boot-starter-tomcat</artifactId>-->
+                <!--                    </exclusion>-->
+                <!--                </exclusions>-->
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-undertow</artifactId>-->
-<!--                <version>${spring_boot_version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-jta-atomikos</artifactId>-->
-<!--                <version>${spring_boot_version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-undertow</artifactId>-->
+            <!--                <version>${spring_boot_version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-jta-atomikos</artifactId>-->
+            <!--                <version>${spring_boot_version}</version>-->
+            <!--            </dependency>-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-aop</artifactId>
@@ -67,6 +73,18 @@
             </dependency>
 
 
+            <!--mybatis plus-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatisplus.spring.version}</version>
+            </dependency>
+
+            <!--mybatis-->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -105,6 +123,19 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql_version}</version>
             </dependency>
+            <!--工具类-->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava_version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok_version}</version>
+            </dependency>
+
 
             <!--swagger配置-->
             <dependency>
@@ -116,6 +147,18 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>swagger-bootstrap-ui</artifactId>
                 <version>1.9.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3_version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons_io_version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
