--- a/spring-boot-mybatisplus/src/main/resources/application.properties
+++ b/spring-boot-mybatisplus/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8888
-spring.application.name=spring-boot-base
+server.port=8001
+spring.application.name=spring-boot-mybatisplus
 #\u914D\u7F6E\u9879\u76EE\u8DEF\u5F84
 #server.servlet.context-path=/roc
 #\u914D\u7F6Ejsp\u6587\u4EF6\u652F\u6301
@@ -8,8 +8,8 @@ spring.mvc.view.suffix=.jsp
 #\u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/roc?allowMultiQueries=true&useUnicode=true&characterEncoding=utf8&serverTimeZone=UTC&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/nextop?allowMultiQueries=true&useUnicode=true&characterEncoding=utf8&serverTimeZone=UTC&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.druid.initial-size=1
@@ -24,7 +24,7 @@ pagehelper.helperDialect=mysql
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 #mybatis\u626B\u63CF\u914D\u7F6E
-mybatis.mapper-locations=classpath*:mybatis/**/*Mapper.xml
+#mybatis.mapper-locations=classpath*:mybatis/**/*Mapper.xml
 #\u65E5\u5FD7\u7EA7\u522B\u914D\u7F6E
 #\u9ED8\u8BA4\u7EA7\u522B
 logging.level.root=INFO
@@ -38,10 +38,8 @@ roc.swagger.flag=true
 roc.swagger.tile=\u6587\u6863\u540D\u79F0
 roc.swagger.names=\u7EF4\u62A4\u4EBA
 roc.swagger.description=\u6587\u6863\u63CF\u8FF0
-
 #\u52A0\u8F7D\u6240\u6709\u7AEF\u70B9\uFF0C\u9ED8\u8BA4\u52A0\u8F7Dinfo/health
 management.endpoints.web.exposure.include=*
-
 #\u63CF\u8FF0\u4FE1\u606F
 info.blog.url=https://blog.csdn.net/cleancp
 info.author=zcp
