--- a/spring-boot-mybatisplus/pom.xml
+++ b/spring-boot-mybatisplus/pom.xml
@@ -73,6 +73,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
