--- a/spring-boot-mybatisplus/src/main/resources/application.properties
+++ b/spring-boot-mybatisplus/src/main/resources/application.properties
@@ -23,17 +23,26 @@ spring.datasource.druid.stat.slowSqlMillis=5000
 pagehelper.helperDialect=mysql
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
-#mybatis\u626B\u63CF\u914D\u7F6E
-#mybatis.mapper-locations=classpath*:mybatis/**/*Mapper.xml
+
+#mybatis plus\u626B\u63CF\u914D\u7F6E
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.auto-mapping-behavior=full
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.mapper-locations=classpath*:mapper/mybatisplus/**/*Mapper.xml
+# \u903B\u8F91\u5220\u9664\u914D\u7F6E # \u5220\u9664\u524D
+mybatis-plus.global-config.db-config.logic-not-delete-value=1
+# \u5220\u9664\u540E
+mybatis-plus.global-config.db-config.logic-delete-value=0
+mybatis-plus.global-config.db-config.schema=nextop
 #\u65E5\u5FD7\u7EA7\u522B\u914D\u7F6E
 #\u9ED8\u8BA4\u7EA7\u522B
 logging.level.root=INFO
 #\u9488\u5BF9\u4E0D\u7528\u5305\u914D\u7F6E\u4E0D\u540C\u7EA7\u522B
-logging.level.com.today.roc.springboot.base.web=DEBUG
+logging.level.com.today.roc.springboot.mybatisplus=DEBUG
 #logfile\u914D\u7F6E
 logging.file.name=D:\\java\\study\\roc-spring-boot\\spring-boot-base\\src\\main\\logs\\info.log
 #swagger\u914D\u7F6E
-roc.swagger.scanPackage=com.today.roc.springboot.base
+roc.swagger.scanPackage=com.today.roc.springboot
 roc.swagger.flag=true
 roc.swagger.tile=\u6587\u6863\u540D\u79F0
 roc.swagger.names=\u7EF4\u62A4\u4EBA
@@ -44,3 +53,9 @@ management.endpoints.web.exposure.include=*
 info.blog.url=https://blog.csdn.net/cleancp
 info.author=zcp
 info.version=@project.version@
+thread.goods.pool.corePoolSize=5
+thread.goods.pool.maxPoolSize=100
+thread.goods.pool.queueCapacity=100
+thread.goods.pool.keepAliveSeconds=60
+thread.goods.pool.threadNamePrefix=goods-exec
+thread.goods.pool.executionHandler=AbortPolicy
